flask-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-deployment
  namespace: two-tier-flask-mysql
  labels:
    app: flask-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-container
        image: chitrakshipuri/two-tier-flask-mysql-app:latest
        ports:
        - containerPort: 5000
