mysql-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-app-statefulset
  namespace: two-tier-flask-mysql
  labels:
    app: mysql
spec:
  serviceName: mysql-service
  replicas: 1  # You can increase replicas if needed
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql-container
        image: mysql:latest
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-initdb
          mountPath: /docker-entrypoint-initdb.d
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-initdb
        configMap:
          name: mysql-db-entrypoint-query-configmap
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
