flask-service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: two-tier-flask-mysql
spec:
  type: NodePort
  selector:
     app: flask-app
  ports:
    - port: 80  
      targetPort: 5000
      nodePort: 30010
