mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: two-tier-flask-mysql
spec:
  selector:
     app: mysql
  ports:
    - port: 3306 
      targetPort: 3306
